cabal-version:  2.2
name:           elisp-too-lua
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/elisp-too-lua#readme>
homepage:       https://github.com/githubuser/elisp-too-lua#readme
bug-reports:    https://github.com/githubuser/elisp-too-lua/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/elisp-too-lua

common library-dependencies
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , composition
    , vector
    , hedgehog
    , hashable
    , lens
    , generic-lens
    , megaparsec >= 6.5 && <7
    , text
    , unordered-containers
    , mtl
    , prettyprinter

common test-dependencies
  hs-source-dirs: test
  build-depends:
      hspec
    , megaparsec
    , hspec-megaparsec
    , text
    , vector
    , raw-strings-qq

library
  import: library-dependencies
  exposed-modules:
      ElispParse.Common
      ElispParse.ElispParser
      ElispParse.NumberParser
      ElispParse.MacroExpansion
      ElispParse.PrettyPrint

      ElispParse.CommonInternal
      ElispParse.ElispParserInternal

      LuaGen.Types.Function
  default-language: Haskell2010

executable elisp-too-lua-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , elisp-too-lua
  default-language: Haskell2010

test-suite elisp-too-lua-test
  import: library-dependencies, test-dependencies
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_elisp_too_lua
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
